앱이름 변경, launchScreen 세팅

--- a/HomeRefrigeratorManagement/Base.lproj/LaunchScreen.storyboard
+++ b/HomeRefrigeratorManagement/Base.lproj/LaunchScreen.storyboard
@@ -16,8 +16,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchBackground" translatesAutoresizingMaskIntoConstraints="NO" id="Alu-bR-Jz4">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenBackgroundImage.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="Alu-bR-Jz4">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -36,6 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launchBackground" width="960" height="640"/>
+        <image name="launchScreenBackgroundImage.jpeg" width="1170" height="2000"/>
     </resources>
 </document>
