--- a/HomeRefrigeratorManagement/Base.lproj/LaunchScreen.storyboard
+++ b/HomeRefrigeratorManagement/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreen1.png" translatesAutoresizingMaskIntoConstraints="NO" id="uOk-i6-yB4">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="uOk-i6-yB4">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="832"/>
                             </imageView>
                         </subviews>
@@ -36,6 +36,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launchScreen1.png" width="355" height="519"/>
+        <image name="LaunchScreen.jpeg" width="1100" height="2200"/>
     </resources>
 </document>
